Added basic text normalisation

--- a/NINA/nina.ipynb
+++ b/NINA/nina.ipynb
@@ -31,7 +31,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe08314a-8541-4abe-ab8c-cc5987c9d251"
+        "outputId": "86a8d278-ea18-43e4-f5e4-4ae9ceb04df4"
       },
       "outputs": [
         {
@@ -106,10 +106,11 @@
       ],
       "metadata": {
         "id": "XeojucSuj2a6",
-        "outputId": "78a49ddc-4c07-4e45-8469-29546ea3395b",
+        "outputId": "6e294c0a-eed6-456c-8ec6-4e3ddbf1ecf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
       "execution_count": 2,
       "outputs": [
@@ -123,6 +124,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Implementing Basic Text Normalization : Creating the preprocessing function"
+      ],
+      "metadata": {
+        "id": "XduF17mDzam8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def clean_text(text):\n",
+        "    if not isinstance(text, str):\n",
+        "        return \"\"\n",
+        "\n",
+        "    # lowercase\n",
+        "    text = text.lower()\n",
+        "\n",
+        "    # removing special characters and punctuation (keep letters, numbers, spaces)\n",
+        "    text = re.sub(r\"[^a-z0-9\\s]\", \"\", text)\n",
+        "\n",
+        "    # removing extra whitespaces\n",
+        "    text = re.sub(r\"\\s+\", \" \", text).strip()\n",
+        "\n",
+        "    return text"
+      ],
+      "metadata": {
+        "id": "ESKY1YMtzaKl"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "df = pd.read_csv(\"fake_news_dataset.csv\")\n",
@@ -134,7 +170,7 @@
       "metadata": {
         "id": "wUnNZWVcj4Ng"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -170,27 +206,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cbcd0d14-2efa-4dab-f866-5007c8116c90"
+        "outputId": "28acb3a5-64da-4859-b8b5-a7c8cbb18903"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Rows left after label processing: 10363\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1268628077.py:11: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df['label'] = df['label'].astype(int)\n"
+            "Rows left after label processing: 12799\n"
           ]
         }
       ]
@@ -203,7 +227,18 @@
       "metadata": {
         "id": "pI1o3qIxj8c4"
       },
-      "execution_count": 20,
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"content\"] = df[\"content\"].apply(clean_text)"
+      ],
+      "metadata": {
+        "id": "m1VqJyhKz9vc"
+      },
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -249,7 +284,7 @@
         },
         "outputId": "8c7ea383-426e-46fb-8888-b7169bd59ca5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -284,7 +319,7 @@
       "metadata": {
         "id": "C_ctP0JKkAUg"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +346,7 @@
       "metadata": {
         "id": "Zg0w-tBwkDGH"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +372,7 @@
           "height": 80
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -794,7 +829,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -844,7 +879,7 @@
       "metadata": {
         "id": "aAg6S5WBotMx"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -866,7 +901,7 @@
       "metadata": {
         "id": "Uv1Jy9mHo0hd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -878,7 +913,7 @@
       "metadata": {
         "id": "u-4vIGtGo2KZ"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -903,7 +938,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,7 +987,7 @@
           "height": 564
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1022,7 +1057,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,7 +1083,7 @@
         "id": "c5197nWqzJgw",
         "outputId": "b3523a1c-1700-419f-f62a-16f469e5b13c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,7 +1113,7 @@
         "id": "Wyoo23b32gZh",
         "outputId": "7279423d-a7c6-4732-ef7d-395c011eb565"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
