Implementation of K-Fold Cross-Validation

--- a/NINA/nina.ipynb
+++ b/NINA/nina.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {
     "id": "XeojucSuj2a6"
    },
@@ -108,7 +108,7 @@
     "import re\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_validate\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
@@ -314,6 +314,16 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# K-Fold Cross-Validation setup (k=5)\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)"
    ]
   },
   {
@@ -844,6 +854,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "5-Fold Cross-Validation:\n",
+      "CV Accuracy: 0.5117 (+/- 0.0057)\n",
+      "CV F1-Score: 0.5107 (+/- 0.0097)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# K-Fold Cross-Validation\n",
+    "print(\"\\n5-Fold Cross-Validation:\")\n",
+    "cv_scores = cross_validate(clf, X_train, y_train, cv=cv, \n",
+    "                           scoring=['accuracy', 'f1'], \n",
+    "                           return_train_score=False)\n",
+    "print(f\"CV Accuracy: {cv_scores['test_accuracy'].mean():.4f} (+/- {cv_scores['test_accuracy'].std():.4f})\")\n",
+    "print(f\"CV F1-Score: {cv_scores['test_f1'].mean():.4f} (+/- {cv_scores['test_f1'].std():.4f})\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -895,6 +931,32 @@
     "    \"Recall\": recall_score(y_test, y_pred_rf),\n",
     "    \"F1-Score\": f1_score(y_test, y_pred_rf)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "5-Fold Cross-Validation:\n",
+      "CV Accuracy: 0.4941 (+/- 0.0067)\n",
+      "CV F1-Score: 0.4854 (+/- 0.0101)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# K-Fold Cross-Validation\n",
+    "print(\"\\n5-Fold Cross-Validation:\")\n",
+    "cv_scores = cross_validate(rf_clf, X_train, y_train, cv=cv, \n",
+    "                           scoring=['accuracy', 'f1'], \n",
+    "                           return_train_score=False)\n",
+    "print(f\"CV Accuracy: {cv_scores['test_accuracy'].mean():.4f} (+/- {cv_scores['test_accuracy'].std():.4f})\")\n",
+    "print(f\"CV F1-Score: {cv_scores['test_f1'].mean():.4f} (+/- {cv_scores['test_f1'].std():.4f})\")"
    ]
   },
   {
@@ -975,6 +1037,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "5-Fold Cross-Validation:\n",
+      "CV Accuracy: 0.4968 (+/- 0.0018)\n",
+      "CV F1-Score: 0.5019 (+/- 0.0063)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# K-Fold Cross-Validation\n",
+    "print(\"\\n5-Fold Cross-Validation:\")\n",
+    "cv_scores = cross_validate(xgb, X_train, y_train, cv=cv, \n",
+    "                           scoring=['accuracy', 'f1'], \n",
+    "                           return_train_score=False)\n",
+    "print(f\"CV Accuracy: {cv_scores['test_accuracy'].mean():.4f} (+/- {cv_scores['test_accuracy'].std():.4f})\")\n",
+    "print(f\"CV F1-Score: {cv_scores['test_f1'].mean():.4f} (+/- {cv_scores['test_f1'].std():.4f})\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1034,6 +1122,32 @@
     "    \"Recall\": recall_score(y_test, y_pred_svm),\n",
     "    \"F1-Score\": f1_score(y_test, y_pred_svm)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "5-Fold Cross-Validation:\n",
+      "CV Accuracy: 0.5108 (+/- 0.0048)\n",
+      "CV F1-Score: 0.5162 (+/- 0.0060)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# K-Fold Cross-Validation\n",
+    "print(\"\\n5-Fold Cross-Validation:\")\n",
+    "cv_scores = cross_validate(svm_clf, X_train, y_train, cv=cv, \n",
+    "                           scoring=['accuracy', 'f1'], \n",
+    "                           return_train_score=False)\n",
+    "print(f\"CV Accuracy: {cv_scores['test_accuracy'].mean():.4f} (+/- {cv_scores['test_accuracy'].std():.4f})\")\n",
+    "print(f\"CV F1-Score: {cv_scores['test_f1'].mean():.4f} (+/- {cv_scores['test_f1'].std():.4f})\")"
    ]
   },
   {
@@ -1099,6 +1213,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "5-Fold Cross-Validation:\n",
+      "CV Accuracy: 0.5015 (+/- 0.0103)\n",
+      "CV F1-Score: 0.5176 (+/- 0.0088)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# K-Fold Cross-Validation\n",
+    "print(\"\\n5-Fold Cross-Validation:\")\n",
+    "cv_scores = cross_validate(best_rf, X_train, y_train, cv=cv, \n",
+    "                           scoring=['accuracy', 'f1'], \n",
+    "                           return_train_score=False)\n",
+    "print(f\"CV Accuracy: {cv_scores['test_accuracy'].mean():.4f} (+/- {cv_scores['test_accuracy'].std():.4f})\")\n",
+    "print(f\"CV F1-Score: {cv_scores['test_f1'].mean():.4f} (+/- {cv_scores['test_f1'].std():.4f})\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1153,6 +1293,62 @@
     "plt.ylim(0, 1)\n",
     "plt.title(\"Model Performance Comparison\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "DOCUMENTATION: Does K-Fold change the model accuracy assessment?\n",
+      "======================================================================\n",
+      "\n",
+      "ANSWER: Yes, K-Fold Cross-Validation provides a more reliable assessment.\n",
+      "\n",
+      "KEY DIFFERENCES:\n",
+      "1. Single split: One accuracy score (could be lucky/unlucky)\n",
+      "2. K-Fold CV: Average of 5 different splits + standard deviation\n",
+      "\n",
+      "FINDINGS:\n",
+      "- If standard deviation is LOW (<0.02): Single split was representative\n",
+      "- If standard deviation is HIGH (>0.05): Single split might be biased\n",
+      "\n",
+      "For each model above, compare:\n",
+      "- Test Accuracy/F1 (from single split)\n",
+      "- CV Accuracy/F1 (mean ± std from 5 folds)\n",
+      "\n",
+      "If they differ significantly, the single split gave a biased view.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Impact of K-Fold Cross-Validation\n",
+    "print(\"=\"*70)\n",
+    "print(\"DOCUMENTATION: Does K-Fold change the model accuracy assessment?\")\n",
+    "print(\"=\"*70)\n",
+    "print(\"\"\"\n",
+    "ANSWER: Yes, K-Fold Cross-Validation provides a more reliable assessment.\n",
+    "\n",
+    "KEY DIFFERENCES:\n",
+    "1. Single split: One accuracy score (could be lucky/unlucky)\n",
+    "2. K-Fold CV: Average of 5 different splits + standard deviation\n",
+    "\n",
+    "FINDINGS:\n",
+    "- If standard deviation is LOW (<0.02): Single split was representative\n",
+    "- If standard deviation is HIGH (>0.05): Single split might be biased\n",
+    "\n",
+    "For each model above, compare:\n",
+    "- Test Accuracy/F1 (from single split)\n",
+    "- CV Accuracy/F1 (mean ± std from 5 folds)\n",
+    "\n",
+    "If they differ significantly, the single split gave a biased view.\n",
+    "\"\"\")"
    ]
   }
  ],
